카테고리 이름 taxonomy

--- a/_posts/2023-01-15-cnn10.md
+++ b/_posts/2023-01-15-cnn10.md
@@ -18,6 +18,8 @@ last_modified_at: 2024-01-15
 
 ## 🦥 본문
 
+<iframe width="935" height="526" src="https://www.youtube.com/embed/WP9UmbzZKik" title="Why Taiwan&#39;s elections matter around the world" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 COY WIRE, CNN 10 ANCHOR: What`s up superstar. Happy Friday, Friyay. I`m Coy Wire. This is CNN 10, let`s rise up, finish this week strong.
 
 We begin today with Boeing CEO, Dave Calhoun, acknowledging that his company made a mistake after an Alaska Airlines flight had to make an
